Fix Docker configuration and add missing Next.js files
- Fix frontend Dockerfile to use npm install instead of npm ci
- Remove deprecated version from docker-compose.yml
- Add missing Next.js configuration files
- Add basic FastAPI main.py
- Create .env file from .env.example

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,11 +2,11 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-# package.jsonとpackage-lock.jsonをコピー
-COPY package*.json ./
+# package.jsonをコピー
+COPY package.json ./
 
-# 依存関係をインストール
-RUN npm ci
+# 依存関係をインストール（package-lock.jsonがないのでnpm installを使用）
+RUN npm install
 
 # アプリケーションコードをコピー
 COPY . .
