--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,267 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
+frontend/node_modules/
+backend/__pycache__/
 
-# testing
+# Testing
 /coverage
+frontend/coverage/
+backend/coverage/
 
-# next.js
+# Next.js
 /.next/
 /out/
+frontend/.next/
+frontend/out/
+frontend/.next/**
+# Next.js specific generated files
+frontend/.next/static/
+frontend/.next/server/
+frontend/.next/cache/
+frontend/.next/types/
+frontend/.next/trace
+frontend/.next/**/*.js
+frontend/.next/**/*.json
+frontend/.next/**/*.map
 
-# production
+# Production builds
 /build
+frontend/build/
+backend/dist/
 
-# misc
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Misc
 .DS_Store
 *.pem
+frontend/.DS_Store
+backend/.DS_Store
 
-# debug
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# local env files
+# Local env files
 .env*.local
 .env
+.env.development
+.env.production
+frontend/.env*.local
+backend/.env*.local
 
-# vercel
+# Vercel
 .vercel
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+frontend/next-env.d.ts
+frontend/*.tsbuildinfo
 
-# Python 
+# Python specific
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+backend/venv/
+backend/env/
 
 # Database
 *.db
 *.sqlite
+*.sqlite3
 postgres_data/
+backend/*.db
+backend/*.sqlite
 
 # Docker
 docker-compose.override.yml
+.dockerignore
 
 # Environment variables
 .env
 .env.local
 .env.production
+frontend/.env
+backend/.env
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+frontend/logs/
+backend/logs/
+
+# Runtime and cache directories
+.npm
+.eslintcache
+.stylelintcache
+.cache
+.parcel-cache
+.nyc_output
+.grunt
+.lock-wscript
+.wafpickle-N
+.node_repl_history
+*.tgz
+.yarn-integrity
+.pnp.*
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+out
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+storybook-static
+
+# Temporary folders
+tmp/
+temp/
+
+# Python and FastAPI specific
+*.pyc
+__pycache__/
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+
+# FastAPI specific
+backend/.pytest_cache/
+backend/htmlcov/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# Docker volumes and data
+docker-data/
+postgres-data/
+
+# Backup files
+*.bak
+*.backup
+*.old
+
+# Package managers
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+# Note: package-lock.jsonは通常commitすべきですが、
+# 開発環境が異なる場合は除外することがあります
